# kmeans

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  kmeans.cpp  kmeans.h  main.cpp  point.cpp  point.h
src/: kmeans.cpp  kmeans.h  main.cpp  point.cpp  point.h
src/sample_data/: data_200_2.txt  data_400_50.txt
src/test/: CMakeLists.txt  test_data_3.txt  test_data_loading.cpp  test_end_to_end.cpp  test_point.cpp
test/: test_point.cpp
